# aurora-orchestrator

./: README.md  docker-compose.yml  pyproject.toml
aurora/: api.py  celery_app.py
