[project]
name = "aurora-orchestrator"
version = "0.1.0"
description = "Distributed task orchestration with Celery + Redis and a FastAPI control plane"
authors = [{name="Lord Nibbler"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "celery>=5.3.6",
  "redis>=5.0.4",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "rich>=13.7.0"
]
